# drone-ops-compliance

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml
apps/server/: config.py  main.py  models.py
apps/server/services/: airport_database.py  faa_airspace.py  faa_tfr.py  nws_weather.py
docs/: APP_STORE.md  ARCHITECTURE.md  DISCLAIMER.md  LIMITATIONS.md  PRIVACY.md  RUNBOOK.md  SAFETY.md  SOURCES.md  index.md  openapi.yaml
tests/: test_rules.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/create-checkout-session/: route.ts
web/app/api/history/: route.ts
web/app/api/preflight/: route.ts
web/app/api/subscribe/: route.ts
web/app/history/: page.tsx
web/app/preflight/: page.tsx
web/app/pricing/: page.tsx
web/app/privacy/: page.tsx
web/app/results/: page.tsx
web/app/terms/: page.tsx
web/components/: FlightLocationMap.tsx
web/lib/: api.ts
