[project]
name = "drone-ops-compliance"
version = "0.1.0"
description = "Read-only advisory preflight tools for drone operations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "uvicorn>=0.40.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
